<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/calculatrice_cote_r_v2"
            android:textSize="32sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:background="@color/turquoise">

        <EditText
            android:id="@+id/matiere_modifier_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/matiere"
            android:textSize="18sp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"
            android:layout_alignTop="@+id/matiere_modifier_cote_r"
            android:layout_marginTop="60dp"
            android:hint="@string/note"
            android:textSize="18sp"
            android:id="@+id/note_modifier_cote_r"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"
            android:layout_alignTop="@+id/note_modifier_cote_r"
            android:layout_marginTop="60dp"
            android:hint="@string/moyenne"
            android:textSize="18sp"
            android:id="@+id/moyenne_modifier_cote_r"/>

        <EditText
            android:id="@+id/ecart_type_modifier_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/moyenne_modifier_cote_r"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:hint="@string/ecart_type"
            android:inputType="numberDecimal"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/moyenne_secondaire_modifier_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/ecart_type_modifier_cote_r"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:hint="@string/moyenne_au_secondaire"
            android:inputType="numberDecimal"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/nbr_unites_modifier_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/information_sur_moyenne_secondaire_modifier"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/nombre_d_unites"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/moyenne_secondaire_modifier_cote_r"
            android:layout_marginTop="50dp"
            android:text="@string/crire_75_si_vous_ne_savez_pas"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:id="@+id/information_sur_moyenne_secondaire_modifier"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <!--> TODO add le onClick pour ajouter cote r<-->
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/Modifiercoter"
            android:layout_centerInParent="true"
            android:background="@drawable/button"
            android:text="@string/modifier_cote_r"
            android:textColor="@color/white"/>
    </RelativeLayout>
</LinearLayout>