<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/calculatrice_cote_r_real"
            android:textSize="32sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:background="@color/turquoise">

        <EditText
            android:id="@+id/matiere_calculatrice_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/matiere_real"
            android:textSize="18sp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"
            android:layout_alignTop="@+id/matiere_calculatrice_cote_r"
            android:layout_marginTop="60dp"
            android:hint="@string/note_real"
            android:textSize="18sp"
            android:id="@+id/note_calculatrice_cote_r"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"
            android:layout_alignTop="@+id/note_calculatrice_cote_r"
            android:layout_marginTop="60dp"
            android:hint="@string/moyenne_real"
            android:textSize="18sp"
            android:id="@+id/moyenne_calculatrice_cote_r"/>

        <EditText
            android:id="@+id/ecart_type_calculatrice_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/moyenne_calculatrice_cote_r"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:hint="@string/ecart_type_real"
            android:inputType="numberDecimal"
            android:textSize="18sp" />



        <EditText
            android:id="@+id/moyenne_secondaire_calculatrice_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/ecart_type_calculatrice_cote_r"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:hint="@string/moyenne_au_secondaire_real"
            android:inputType="numberDecimal"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/nbr_unites_calculatrice_cote_r"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/information_sur_moyenne_secondaire"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/nombre_d_unites_real"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/moyenne_secondaire_calculatrice_cote_r"
            android:layout_marginTop="50dp"
            android:text="@string/crire_75_si_vous_ne_savez_pas_real"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:id="@+id/information_sur_moyenne_secondaire"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <!--> TODO add le onClick pour ajouter cote r<-->
        <Button
            android:id="@+id/ajouterModifiercoter"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button"
            android:text="@string/ajouter_cote_r_real"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>