<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    android:gravity="center"
    tools:context=".ConnectionActivity">

    <TextView
        android:id="@+id/textViewConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connection"
        android:textAlignment="center"
        android:textColor="@color/gris"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewConnection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/buttonSeConnecter"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:text="@string/se_connecter"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewMotPasseOblier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSeConnecter"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:text="@string/mot_de_passe_oublier"
        android:textColor="#777777"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewSenregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMotPasseOblier"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/s_enregistrer"
        android:textColor="#777777"
        android:textSize="15sp" />

</RelativeLayout>